# esp-idf

./: 27.11.2021_ESP32Cam_0101.code-workspace
Projects/TrafficSignClassification_MNV1/: Metrics.ipynb  sdkconfig  sdkconfig.old
Projects/TrafficSignClassification_MNV1/main/: CMakeLists.txt  main_functions.cc  model_settings.cc  traffic_sign_model_data_MNV1.cc
Projects/TrafficSignDetection_YoloV5_1.5/: Metrics.ipynb  extensions.list  sdkconfig  sdkconfig.old
Projects/TrafficSignDetection_YoloV5_1.5/main/: CMakeLists.txt  YoloV5Weights.cc  app_camera_esp.c  image_provider.cc  main_functions.cc
examples/TrafficSignClassification_MNV1/main/: app_camera_esp.c  detection_responder.cc  main_functions.cc  model_settings.h  person_detect_model_data.cc
examples/TrafficSignClassification_MNV1_1.2/: TrafficSignClassification_MNV1_1.2.code-workspace
examples/TrafficSignClassification_MNV1_1.2/main/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  image_provider.h  main.cc  traffic_sign_model_data_MNV1.cc  traffic_sign_model_data_MNV1.h
examples/TrafficSignClassification_MNV1_1.3/main/: CMakeLists.txt  image_provider.cc  main_functions.h
examples/TrafficSignDetection_YoloV5/: CMakeLists.txt
examples/TrafficSignDetection_YoloV5_1.2/: TrafficSignDetection_YoloV5_1.2.code-workspace
examples/TrafficSignDetection_YoloV5_1.2/main/: CMakeLists.txt  YoloV5_Weights.cc  YoloV5_Weights.h  app_camera_esp.h  main_functions.cc
examples/TrafficSignDetection_YoloV5_1.3/: TrafficSignDetection_YoloV5_1.3.code-workspace
examples/TrafficSignDetection_YoloV5_1.5/: partitions.csv
(+18 files in other folders)
